--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>pomodoro</h2>
+        <div class="info-tabs">
+            <div class="work-tab">pomodoro</div>
+            <div class="break-tab">break</div>
+        </div>
+        <div class="timer">
+            <h1 class="timer">17:45</h1>
+            <button class="action">start</button>
+        </div>
+        <div class="settings">⚙️</div>
+    </div>
 </body>
 </html>
