style: add style to pomodoro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="work-tab">pomodoro</div>
             <div class="break-tab">break</div>
         </div>
-        <div class="timer">
+        <div class="timer-container">
             <h1 class="timer">17:45</h1>
             <button class="action">start</button>
         </div>
