feat: add icon tag for settings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>pomodoro timer</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -18,7 +19,9 @@
             <h1 class="timer">17:45</h1>
             <button class="action">start</button>
         </div>
-        <div class="settings">⚙️</div>
+        <div class="settings">
+            <i class="fa-solid fa-gear"></i>
+        </div>
     </div>
 </body>
 </html>
