style: add style to modal

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pomodoro timer</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./main.js"></script>
+    <script defer src="./main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,15 +30,13 @@
     </div>
 
     <!-- setting modal -->
-    <dialog id="myDialog">
-        <div>
-            <h2>Modal Title</h2>
-            <div class="close-modal">
-                <i class="fa-solid fa-xmark"></i>
-            </div>
+    <dialog class="setting-modal">
+        <div class="heading">
+            <h2>settings</h2>
+            <i class="fa-solid fa-xmark close-modal"></i>
         </div>
-        <div>
-            <h4>time (minutes) </h4>
+        <div class="times">
+            <h5>time (minutes) </h5>
             <div class="time-inputs">
                 <div>
                     <label for="work">work</label>
