add values to inputs

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <div class="time-inputs">
                 <div>
                     <label for="work">work</label>
-                    <input type="number" id="work" min="10" max="50" step="5">
+                    <input type="number" value="25" id="work" min="10" max="50" step="5">
                 </div>
                 <div>
                     <label for="break">break</label>
-                    <input type="number" id="break" min="5" max="30" step="5">
+                    <input type="number" value="5" id="break" min="5" max="30" step="5">
                 </div>
                 <div>
                     <label for="session">session</label>
-                    <input type="number" id="session" min="2" max="8">
+                    <input type="number" value="2" id="session" min="2" max="8">
                 </div>
             </div>
         </div>
