feat: replace div with button for click interactio

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
         <h2>pomodoro</h2>
         <div class="info-tabs">
-            <div class="work-tab">work</div>
-            <div class="break-tab">break</div>
+            <button class="work-tab">work</button>
+            <button class="break-tab">break</button>
         </div>
         <div class="timer-container">
             <h1 class="timer">25:00</h1>
