style: style buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h2>pomodoro</h2>
-        <div class="info-tabs">
+        <div class="buttons">
             <button class="work-tab">work</button>
             <button class="break-tab">break</button>
         </div>
