feat: add work and break button functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="break-tab">break</button>
         </div>
         <div class="timer-container">
-            <h1 class="timer">25:00</h1>
+            <h1 class="timer"></h1>
             <button class="action">start</button>
         </div>
         <div class="settings">
