feat: add html elements for theme switcher

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
                 </div>
             </div>
         </div>
+        <div class="themes">
+            <h5>color</h5>
+            <div class="colors">
+                <div class="color">red</div>
+                <div class="color">red</div>
+                <div class="color">red</div>
+            </div>
+        </div>
 
         <button class="apply">apply</button>
     </dialog>
