style: add style to theme switcher

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="themes">
             <h5>color</h5>
             <div class="colors">
-                <div class="color">red</div>
-                <div class="color">red</div>
-                <div class="color">red</div>
+                <div class="color" style="background-color: #f96d00;"></div>
+                <div class="color" style="background-color: #6CB4EE;"></div>
+                <div class="color" style="background-color: #9966CC;"></div>
             </div>
         </div>
 
