--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h5>color</h5>
             <div class="colors">
                 <div class="color" data-color="#f96d00" style="background-color: #f96d00;"></div>
-                <div class="color" data-color="#6CB4EE" style="background-color: #6CB4EE;"></div>
+                <div class="color" data-color="#00BFFF" style="background-color: #00BFFF;"></div>
                 <div class="color" data-color="#9966CC" style="background-color: #9966CC;"></div>
             </div>
         </div>
