feat: add role attribute to theme div

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="themes">
             <h5>color</h5>
             <div class="colors">
-                <div class="color" data-color="#f96d00" style="background-color: #f96d00;"></div>
-                <div class="color" data-color="#00BFFF" style="background-color: #00BFFF;"></div>
-                <div class="color" data-color="#9966CC" style="background-color: #9966CC;"></div>
+                <div role="button" class="color" data-color="#f96d00" style="background-color: #f96d00;"></div>
+                <div role="button" class="color" data-color="#00BFFF" style="background-color: #00BFFF;"></div>
+                <div role="button" class="color" data-color="#9966CC" style="background-color: #9966CC;"></div>
             </div>
         </div>
 
